--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
-        background-color: #ccc;
+        background-color: #(245,245,245);
     }
     </style>
 </head>
